src/components/AuthMethodButton/AuthMethodButton.css
.criipto-eid-btn {
  padding: 6px 24px 6px 16px;
  height: 60px;
  box-sizing: border-box;
  text-decoration: none;
  border: 0;

  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 16px;

  font-family: 'IBM Plex Sans', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;

  color: #fff;
  background: #604fed;
  cursor: pointer;

  text-align: start;
}

@media (max-width: 320px) {
  .criipto-eid-btn {
    padding-right: 6px;
    padding-left: 6px;
  }
}

.criipto-eid-btn:hover,
.criipto-eid-btn:active {
  color: #fff;
}

.criipto-eid-btn .criipto-eid-logo {
  width: 88px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  flex-shrink: 0;
}

.criipto-eid-btn .criipto-eid-logo img {
  max-width: 100%;
  max-height: 100%;
}

.criipto-eid-btn {
  --bg-lightness-mod: 0%;
  --bg-alpha-mod: 100%;

  &:hover {
    --bg-lightness-mod: -10%;
  }
}

.criipto-eid-btn.criipto-eid-btn--fi,
.criipto-eid-btn.criipto-eid-btn--uk-oneid {
  /* By default we decrease lightness by 10%, but for eIDs with dark colors, we increase it instead */
  &:hover {
    --bg-lightness-mod: 10%;
  }
}

.criipto-eid-btn.criipto-eid-btn--dk-mitid {
  background-color: hsl(214.96 100% calc(45.1% + var(--bg-lightness-mod)) / var(--bg-alpha-mod));
}
.criipto-eid-btn.criipto-eid-btn--se-bankid {
  background-color: hsl(198.46 52.7% calc(29.02% + var(--bg-lightness-mod)) / var(--bg-alpha-mod));
}
.criipto-eid-btn.criipto-eid-btn--no-bankid {
  background-color: hsl(280 60% calc(18.63% + var(--bg-lightness-mod)) / var(--bg-alpha-mod));
}
.criipto-eid-btn.criipto-eid-btn--no-vipps {
  background-color: hsl(15.07 100% calc(57.06% + var(--bg-lightness-mod)) / var(--bg-alpha-mod));
}
.criipto-eid-btn.criipto-eid-btn--itsme {
  background-color: hsl(9.72 98.18% calc(56.86% + var(--bg-lightness-mod)) / var(--bg-alpha-mod));
}
.criipto-eid-btn.criipto-eid-btn--fi {
  background-color: hsl(0 0% calc(20% + var(--bg-lightness-mod)) / var(--bg-alpha-mod));
}
.criipto-eid-btn.criipto-eid-btn--se-frejaid {
  background-color: hsl(242.7 43.41% calc(40.2% + var(--bg-lightness-mod)) / var(--bg-alpha-mod));
}
.criipto-eid-btn.criipto-eid-btn--uk-oneid {
  background-color: hsl(210.94 96.97% calc(12.94% + var(--bg-lightness-mod)) / var(--bg-alpha-mod));
}
.criipto-eid-btn.criipto-eid-btn--de-personalausweis {
  background-color: hsl(208.57 55.26% calc(44.71% + var(--bg-lightness-mod)) / var(--bg-alpha-mod));
}
.criipto-eid-btn.criipto-eid-btn--nl-idin {
  background-color: hsl(196 100% calc(47.06% + var(--bg-lightness-mod)) / var(--bg-alpha-mod));
}

.criipto-eid-btn.criipto-eid-btn--disabled {
  pointer-events: none;
  --bg-alpha-mod: 30%;
}

.criipto-eid-btn--loading {
  pointer-events: none;
  --bg-alpha-mod: 70%;
}

